--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-deno_core = ">=0.49.0"
-calcite = "0.1.0"
+deno_core = "0.56.0"
+calcite = "0.2.3"
 
