--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-deno_core = "0.68.0"
-calcite = "0.2.4"
-
+deno_core = "0.88.0"
+futures = "0.3.15"
+serde = "1"
